# cigno-code-embeddings

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
cigno_code/data/: __init__.py  extractor.py  languages.py  pipeline.py  teacher.py  text_formatter.py
cigno_code/training/: distillation.py
configs/: default.yaml
scripts/: 01_extract_corpus.py  02_generate_teacher_embeddings.py  03_train.py  04_evaluate.py  05_export_onnx.py  prep_codesearchnet.py  run_all.sh
src/: config.py
src/evaluation/: benchmark.py  metrics.py
src/export/: onnx.py
src/training/: distillation.py
tests/: test_extractor.py  test_text_formatter.py
