[project]
name = "cigno-code-small"
version = "0.1.0"
description = "Distilled code embedding model for Cigno"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Michele Riva" }]

dependencies = [
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "datasets>=2.18.0",
    "tree-sitter>=0.22.0",
    # Original 8
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    # New 18
    "tree-sitter-ruby",
    "tree-sitter-php",
    "tree-sitter-c-sharp",
    "tree-sitter-kotlin",
    "tree-sitter-swift",
    "tree-sitter-scala",
    "tree-sitter-bash",
    "tree-sitter-lua",
    "tree-sitter-haskell",
    "tree-sitter-julia",
    "tree-sitter-elixir",
    "tree-sitter-ocaml",
    "tree-sitter-zig",
    "tree-sitter-fortran",
    "tree-sitter-sql",
    "tree-sitter-objc",
    "tree-sitter-powershell",
    "tree-sitter-commonlisp",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "huggingface-hub>=0.22.0",
    "accelerate>=0.26.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
export = [
    "optimum[onnxruntime]>=1.18.0",
    "onnxruntime>=1.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
